# aeval

./: README.rst  pyproject.toml
tests/: test_aeval.py
