[tool.poetry]
name = "aeval"
version = "0.1.2"
description = ""
authors = ["Chris Chambers <chris@peanutcode.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
